# trino_mcp

./: .env  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  llm_query_trino.py  llm_trino_api.py  load_bullshit_data.py  openapi.json  pyproject.toml  pytest.ini  requirements-dev.txt  run_tests.sh  test_bullshit_query.py  test_llm_api.py  test_mcp_stdio.py
etc/: jvm.config  node.properties
etc/catalog/: bullshit.properties
examples/: simple_mcp_query.py
scripts/: docker_stdio_test.py  fix_trino_session.py  test_direct_query.py  test_fixed_client.py  test_messages.py  test_quick_query.py  test_stdio_trino.py
src/trino_mcp/: __init__.py  config.py  server.py  trino_client.py
src/trino_mcp/resources/: __init__.py
src/trino_mcp/tools/: __init__.py
tests/: __init__.py  conftest.py  test_client.py
tests/integration/: __init__.py
tools/: create_bullshit_data.py  run_queries.sh  setup_bullshit_table.py
tools/setup/: setup_data.sh  setup_tables.sql
trino-conf/catalog/: memory.properties
